--- a/SARA_ALVAREZ_LOPEZ_TIENDA/SARA_ALVAREZ_LOPEZ_TIENDA.csproj
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/SARA_ALVAREZ_LOPEZ_TIENDA.csproj
@@ -10,7 +10,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Filters\" />
   </ItemGroup>
 
 </Project>
